amend docs
