# models/wallet.go
@@ -54,3 +54,18 @@ type GetBlockSuccessResponse struct {
         } `json:"data"`
     }
 }
+
+// swagger:parameters getEthBalance
+type GetEthBalanceParams struct {
+    // Ethereum address
+    // example: 0xED2F74E1fb73b775E6e35720869Ae7A7f4D755aD
+    // in: query
+    Address string `json:"address"`
+}
+
+
+// swagger:parameters getEthBalances
+type EthAddressesParams struct {
+    // in: body
+    Body Addresses `json:"body"`
+}
